--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1082,7 +1082,7 @@ hamburger menu
 //   }
 // }
 /* Desktop menu */
-@media #{$medium-up} {
+@@media all and (min-width: 60em) {
     .menu1 {
         align-items: flex-start;
         justify-content: center;
