--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1082,7 +1082,7 @@ hamburger menu
 //   }
 // }
 /* Desktop menu */
-@@media all and (min-width: 60em) {
+@media all and (min-width: 60em) {
     .menu1 {
         align-items: flex-start;
         justify-content: center;
@@ -1123,6 +1123,13 @@ hamburger menu
     }
     #hamburger .attuale a {
         color: $primary-color;
+    }
+
+    #hamburger li.attuale.button {
+        background-color: rgb(134, 7, 10);
+    }
+    #hamburger li.attuale.button a {
+        color: white;
     }
 }
 
