--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -257,7 +257,7 @@ menupage text
 ===================================================================*/
 
 #menupage-text {
-    /*padding:0 2rem;*/
+    //padding:0 2rem;
     h1 {
         text-transform: uppercase;
         margin-bottom: 2rem;
