--- a/scss/app.css
+++ b/scss/app.css
@@ -5811,7 +5811,7 @@ menupage text
 @media only screen and (max-width: 45em) {
   #menupage-text h2 {
     font-size: 1.35em;
-    margin-bottom: 1.2rem;
+    margin-bottom: 1rem;
     margin-top: 1.5rem;
     text-align: left;
   }
@@ -5853,6 +5853,12 @@ menupage text
   font-size: 0.95rem;
   margin-left: 1.5rem;
   font-weight: normal;
+}
+
+#menupage-text small {
+  font-size: 0.85rem;
+  font-style: italic;
+  line-height: 1.2rem;
 }
 
 .panel-menu-n {
