better heigh-line

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -318,10 +318,12 @@ menupage text
         margin-left: 1.5rem;
         font-weight: normal;
    }
-   small {
+   p small {
         font-size: 0.85rem;
         font-style: italic;
-        line-height: 1.2rem;
+        line-height: 1.25rem;
+        display: inline-block;
+        margin-top: 0.3rem;
    }
 }
 
