--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -939,12 +939,13 @@ tabs menu
 ===================================================================*/
 
 ul.tabs {
-    text-align: center;
     li {
         float: none !important;
         display: inline-block;
         margin-top: 1rem;
-        padding: 0px;
+    }
+    @media #{$small-only} {
+        text-align: center;
     }
 }
 
