--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -448,6 +448,26 @@ footer header style
         }
     }
 }
+//orari footer
+
+.testo-orari {
+    font-size: 1rem;
+    @media #{$small-only} {
+        font-size: 0.83rem;
+        }
+}
+.orari {
+    display: inline-block;
+    float: right;
+    margin-right: 0rem;
+    @media #{$medium} {
+        margin-right: 1rem;
+    }
+    @media #{$large-up} {
+        margin-right: 4rem;
+    }
+}
+
 .panel-hr {
     margin-bottom: 0;
     margin-top: 0;
