--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -307,7 +307,7 @@ menupage text
     h6 {
         font-size: 1rem;
     }
-    p {
+    li>p {
         font-size: 1.125rem;
         margin-bottom: 0rem;
         @media #{$small-only} {
@@ -1033,7 +1033,7 @@ accordion domande frequenti
 }
 
 /*===================================================================
-hamburger menu
+navbar menu
 ===================================================================*/
 
 /* Basic styling */
