--- a/scss/app.css
+++ b/scss/app.css
@@ -6037,6 +6037,15 @@ footer header style
   }
 }
 
+.orari-flex > li {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.orari-flex > li > * {
+  flex: 1;
+}
+
 .panel-hr {
   margin-bottom: 0;
   margin-top: 0;
@@ -6463,11 +6472,14 @@ accordion domande frequenti
 /*===================================================================
 navbar menu
 ===================================================================*/
-/* Basic styling */
 nav {
   background: #ffffff;
   border-bottom: 2.5px #666666 solid;
   padding: 0 5px 0 0px;
+}
+
+#hamburger {
+  /* Desktop menu */
 }
 
 #hamburger a {
@@ -6475,19 +6487,43 @@ nav {
   text-decoration: none;
 }
 
-.menu1 {
+#hamburger .menu1 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
   list-style-type: none;
   margin: 0px 0px 0px 15px;
   padding: 0.5rem 0rem 0.5rem 0rem;
 }
 
-.logo {
+#hamburger .logo {
+  flex: 2;
+  order: 1;
   font-size: 1,125rem;
   padding: 7.5px 20px 7.5px 0;
 }
 
-.item {
-  padding: 5px 10px 15px 20px;
+#hamburger .item {
+  padding: 15px 20px 15px 10px;
+  order: 3;
+  width: 100%;
+  text-align: left;
+  display: none;
+}
+
+#hamburger .button {
+  order: 2;
+}
+
+#hamburger .item.button {
+  margin-top: 16px;
+  margin-bottom: 12px;
+  margin-right: 10px;
+}
+
+#hamburger .active .item {
+  display: block;
 }
 
 #hamburger .button a {
@@ -6506,55 +6542,23 @@ nav {
 }
 
 #hamburger .item:not(.button) a:hover,
-.item a:hover::after {
+#hamburger .item a:hover::after {
   color: #e00c10;
 }
 
-.toggle {
+#hamburger .toggle {
   flex: 1;
   text-align: right;
-}
-
-/* Mobile menu */
-.menu1 {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.menu1 li a {
-  display: block;
-  padding: 5px 5px;
-}
-
-.toggle {
   order: 1;
   font-size: 1.25rem;
 }
 
-.item.button {
-  order: 2;
-  margin-top: 16px;
-  margin-bottom: 12px;
-  margin-right: 10px;
-}
-
-.item {
-  order: 3;
-  width: 100%;
-  padding: 10px 0px;
-  text-align: left;
-  display: none;
-  padding-left: 10px;
-}
-
-.active .item {
+#hamburger .menu1 li a {
   display: block;
+  padding: 5px 5px;
 }
 
 #hamburger .button a {
-  order: 2;
   display: block;
   color: #FFFFFF;
   font-size: 1.25rem;
@@ -6572,22 +6576,14 @@ nav {
   color: white;
 }
 
-/* Tablet menu */
-/* Desktop menu */
 @media all and (min-width: 60em) {
-  .menu1 {
+  #hamburger .menu1 {
     align-items: flex-start;
     justify-content: center;
     flex-wrap: nowrap;
-    background: none;
     margin: 0 15px;
   }
-  .logo {
-    order: 0;
-    flex: 1;
-  }
-  .item {
-    order: 1;
+  #hamburger .item {
     position: relative;
     display: block;
     width: auto;
@@ -6595,22 +6591,17 @@ nav {
   }
   #hamburger .item.button {
     width: auto;
-    order: 1;
     display: block;
     margin-top: 0px;
     margin-bottom: 0px;
   }
   #hamburger .button a {
-    order: 2;
     display: block;
     color: #FFFFFF;
     margin-top: 1px;
     font-size: 1.25rem;
   }
-  #hamburger .button {
-    order: 2;
-  }
-  .toggle {
+  #hamburger .toggle {
     display: none;
   }
 }
