--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -192,6 +192,11 @@ homepage
         }
     }
 }
+.sottobottone p {
+    margin-top: 1rem;
+    font-size: 0.875rem;
+    line-height: 1.4rem;
+}
 .asporto-hero {
     background: url('https://www.beerstrot.it/asset/img/large/asporto-background.jpg') no-repeat center center;
     background-size: cover;
