--- a/scss/app.css
+++ b/scss/app.css
@@ -5715,6 +5715,12 @@ homepage
   }
 }
 
+.sottobottone p {
+  margin-top: 1rem;
+  font-size: 0.875rem;
+  line-height: 1.4rem;
+}
+
 .asporto-hero {
   background: url("https://www.beerstrot.it/asset/img/large/asporto-background.jpg") no-repeat center center;
   background-size: cover;
