--- a/scss/app.css
+++ b/scss/app.css
@@ -6043,13 +6043,14 @@ footer header style
   }
 }
 
-.orari-flex > li {
-  display: flex;
-  flex-flow: row nowrap;
+.orari-schedule {
+  white-space: nowrap;
 }
 
-.orari-flex > li > * {
-  flex: 1;
+.orari-schedule li span {
+  display: inline-block;
+  width: 90px;
+  margin-right: 20px;
 }
 
 .panel-hr {
