--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -479,8 +479,24 @@ footer header style
 }
 .orari-schedule li span {
     display: inline-block;
-    width: 90px;
+    width: 70px;
     margin-right: 20px;
+}
+.orari-footer-schedule{
+    font-size: 1rem;
+    @media #{$small-only} {
+        font-size: 0.83rem;
+    }
+}
+.orari-footer-schedule li span {
+    display: inline-block;
+    width: 80px;
+    margin-right: 20px;
+    @media #{$small-only} {
+        width: 70px;
+        margin-right: 20px;
+    }
+
 }
 
 .panel-hr {
