--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -90,6 +90,12 @@ margini per allineare le aside e i button
         margin-top: .5rem;
     }
 }
+.extra-space-img-asporto {
+    margin-top: .5rem;
+    @media #{$small-only} {
+        margin-top: .5rem;
+    }
+}
 .extra-space-aside {
     margin-top: 2.8rem;
 }
