--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1145,6 +1145,7 @@ $panel-padding: rem-calc(15);
 // We use these to control the style of the modal itself.
 // $reveal-modal-bg: $white;
 // $reveal-position-top: rem-calc(100);
+$reveal-position-top: rem-calc(50);
 // $reveal-default-width: 80%;
 // $reveal-max-width: $row-width;
 // $reveal-modal-padding: rem-calc(20);
