--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1268,6 +1268,7 @@ $side-nav-divider-color: scale-color($primary-color, $lightness: 10%);
 // $sub-nav-font-family: $body-font-family;
 // $sub-nav-font-size: rem-calc(14);
 // $sub-nav-font-color: $aluminum;
+$sub-nav-font-color: #444;
 // $sub-nav-font-weight: $font-weight-normal;
 // $sub-nav-text-decoration: none;
 // $sub-nav-padding: rem-calc(3 16);
