--- a/scss/app.scss
+++ b/scss/app.scss
@@ -25,7 +25,7 @@
 // @import "foundation/components/joyride";
 // @import "foundation/components/keystrokes";
 @import "foundation/components/labels";
-// @import "foundation/components/magellan";
+@import "foundation/components/magellan";
 // @import "foundation/components/orbit";
 // @import "foundation/components/pagination";
 @import "foundation/components/panels";
@@ -35,7 +35,7 @@
 @import "foundation/components/reveal";
 //@import "foundation/components/side-nav";
 // @import "foundation/components/split-buttons";
-//@import "foundation/components/sub-nav";
+@import "foundation/components/sub-nav";
 // @import "foundation/components/switches";
 @import "foundation/components/tables";
 @import "foundation/components/tabs";
